# lifetime

./: Cargo.toml  README.md
data/: practices.toml  tips.toml
examples/: notif_probe.rs
src/: app.rs  config.rs  main.rs  shortcut.rs
src/breathing/: mod.rs
src/db/: mod.rs  queries.rs  schema.rs
src/notify/: desktop.rs  mod.rs  sound.rs
src/practices/: mod.rs
src/reminders/: mod.rs
src/scheduler/: event.rs  mod.rs  rules.rs
src/stats/: mod.rs
src/tips/: mod.rs  model.rs
src/ui/: break_window.rs  breathing.rs  dashboard.rs  fonts.rs  library.rs  mod.rs  practice.rs  settings.rs  stats_view.rs  theme.rs  widgets.rs
