[package]
name = "lifetime"
version = "0.1.0"
edition = "2021"
description = "程序员/久坐人群的科学健康提醒工具"
license = "MIT"
authors = ["zzhtl"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui_plot = "0.29"

notify-rust = "4"
rodio = { version = "0.19", default-features = false, features = [
    "symphonia-vorbis",
    "symphonia-wav",
] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

crossbeam-channel = "0.5"
anyhow = "1"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
